<resources>
    <string name="app_name">Basketball Scheduler</string>
    <string name="text_login">Login</string>
    <string name="text_register_btn">Register</string>
    <string name="edit_text_email_hint">Your email address</string>
    <string name="edit_text_password_hint">Password</string>
    <string name="edit_text_username_hint">Username</string>
    <string name="edit_text_firstname_hint">First name</string>
    <string name="edit_text_lastname_hint">Last name</string>
    <string name="edit_text_phone_hint">Phone</string>
    <string name="text_register">Still don\'t have account? Click here to create one</string>
    <string name="action_show_map">Show map</string>
    <string name="action_profile">Profile</string>
    <string name="label_main_activity">Events</string>
    <string name="action_create_event">Create event</string>
    <string name="title_activity_maps">Maps</string>
    <string name="action_show_hide_users">Show users</string>
    <string name="label_rankings_activity">Rankings</string>
    <string name="action_ranking">Ranking</string>
    <string name="action_singOut">Sign out</string>
    <string name="label_create_basketball_event_activity">Create Basketball Event</string>
    <string name="edit_text_event_description_hint">Enter short description about event</string>
    <string name="edit_text_created_at">Event created on (MM/dd/yyyy)</string>
    <string name="edit_text_begins_at">Event begins at (MM/dd/yyyy HH:mm)</string>
    <string name="edit_text_ends_on">Event ends on (MM/dd/yyyy HH:mm)</string>
    <string name="text_set_btn">Set</string>
    <string name="edit_text_max_num_of_players">Maximum number of players</string>
    <string name="edit_text_max_current_of_players">Current number of players</string>
    <string name="text_set_location">Set location</string>
    <string name="text_use_my_location_btn">Use my location</string>
    <string name="text_pick_location_from_map_btn">Pick from map</string>
    <string name="text_create_event">Create event</string>
    <string name="text_location_has_been_set">(Location has been set)</string>
    <string name="checkbox_main_show_only_your_events">Show only your events</string>
    <string name="label_begins_at">Begins at:</string>
    <string name="label_ends_on">Ends on:</string>
    <string name="label_max_num_of_players">Max num of players:</string>
    <string name="label_basketball_event_activity">Basketball Event</string>
    <string name="label_current_num_of_players">Current num of players:</string>
    <string name="label_createdOn">Created on:</string>
    <string name="text_show_on_map">Show on map</string>
    <string name="text_apply_filter">Apply filter</string>
    <string name="text_clear_filter">Clear filter</string>
    <string name="text_join_event">Join event</string>
    <string name="label_user_profile">User profile</string>
    <string name="label_fullname">Full name:</string>
    <string name="label_mail">Mail:</string>
    <string name="label_phone">Phone:</string>
    <string name="label_points">Points:</string>
    <string name="label_user_uknown">This user is not in your friends list</string>
    <string name="text_send_friend_request">Send friend request</string>
    <string name="label_friends_requests">Friend requests</string>
    <string name="action_friend_requests">Friend requests</string>
    <string name="label_filter">Filter</string>
    <string name="label_radius">Radius:</string>
    <string name="text_radius_hint">Expressed in kilometers</string>
    <string name="action_filter">Filter</string>
    <string name="label_services">Services</string>
    <string name="action_services">Services</string>
    <string name="text_services_findEvent">Enable service for discovering events</string>
    <string name="geofence_transition_invalid_type">Geofence unhandled transition type</string>
    <string name="action_events">Events</string>
</resources>