<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mosis.elfak.basketscheduling.activities.MainActivity">
    <item
        android:id="@+id/action_show_map"
        android:orderInCategory="100"
        android:title="@string/action_show_map"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_map_white"/>
    <item
        android:id="@+id/action_create_event"
        android:orderInCategory="100"
        android:title="@string/action_create_event"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add_white"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_ranking"
        android:orderInCategory="100"
        android:title="@string/action_ranking"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_friend_requests"
        android:orderInCategory="100"
        android:title="@string/action_friend_requests"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_singOut"
        android:orderInCategory="100"
        android:title="@string/action_singOut"
        app:showAsAction="never"/>
</menu>