<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mosis.elfak.basketscheduling.activities.MapsActivity">
    <item
        android:id="@+id/action_create_event"
        android:orderInCategory="100"
        android:title="@string/action_create_event"
        app:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_add_white"/>
    <item
        android:id="@+id/action_show_hide_users"
        android:orderInCategory="100"
        android:title="@string/action_show_hide_users"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="100"
        android:title="@string/action_filter"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_events"
        android:orderInCategory="100"
        android:title="@string/action_events"
        app:showAsAction="never"/>
</menu>