<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="50dp">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout_create_basketball_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="noScroll">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_create_basketball_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/orange"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".CreateBasketballEventActivity">

            <ImageView
                android:id="@+id/imageView_create_basketball_event_image"
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginTop="60dp"
                android:onClick="eventImage_onClick"
                android:src="@drawable/ic_event_image"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editText_create_basketball_event_description"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/edit_text_event_description_hint"
                android:inputType="textShortMessage"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView_create_basketball_event_image"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editText_create_basketball_event_begins_at"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/edit_text_begins_at"
                android:inputType="datetime"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_create_basketball_event_description"
                tools:ignore="TouchTargetSizeCheck" />


            <EditText
                android:id="@+id/editText_create_basketball_event_ends_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/edit_text_ends_on"
                android:inputType="datetime"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_create_basketball_event_begins_at"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editText_create_basketball_event_max_num_of_players"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/edit_text_max_num_of_players"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_create_basketball_event_ends_on"
                tools:ignore="TouchTargetSizeCheck" />

            <EditText
                android:id="@+id/editText_create_basketball_event_current_num_of_players"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/edit_text_max_current_of_players"
                android:inputType="number"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15dp"
                android:textStyle="italic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_create_basketball_event_max_num_of_players"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/textView_create_basketball_event_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:fontFamily="sans-serif"
                android:text="@string/text_set_location"
                android:textSize="15dp"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editText_create_basketball_event_current_num_of_players" />

            <TextView
                android:id="@+id/textView_create_basketball_event_location_set"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="30dp"
                android:fontFamily="sans-serif"
                android:text="@string/text_location_has_been_set"
                android:textSize="15dp"
                android:textStyle="italic"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView_create_basketball_event_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/textView_create_basketball_event_location" />

            <Button
                android:id="@+id/button_create_basketball_event_my_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/white"
                android:onClick="use_my_location_btn_onClick"
                android:text="@string/text_use_my_location_btn"
                android:textColor="@color/orange"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_create_basketball_event_location" />

            <Button
                android:id="@+id/button_create_basketball_event_pick_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:onClick="pick_location_btn_onClick"
                android:text="@string/text_pick_location_from_map_btn"
                android:textColor="@color/orange"
                android:textSize="15sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/button_create_basketball_event_my_location"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/button_create_basketball_event_my_location" />

            <Button
                android:id="@+id/button_create_basketball_event_create_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:backgroundTint="@color/white"
                android:onClick="create_event_btn_onClick"
                android:text="@string/text_create_event"
                android:textColor="@color/orange"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_create_basketball_event_my_location" />

            <ProgressBar
                android:id="@+id/progressBar_create_event"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="30dp"
                android:indeterminateTint="@color/orange"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_create_basketball_event_create_event" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>