<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity"
    android:background="@color/orange">

    <TextView
        android:id="@+id/textView_login_loginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="110dp"
        android:fontFamily="sans-serif-black"
        android:lineSpacingExtra="10sp"
        android:text="@string/text_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_login_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_email_hint"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_loginTitle"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/editText_login_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:fontFamily="sans-serif"
        android:hint="@string/edit_text_password_hint"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_email"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/button_login_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/orange"
        android:textSize="17sp"
        android:onClick="login_btn_onClick"
        android:text="@string/text_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_login_password" />

    <TextView
        android:id="@+id/textView_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:onClick="register_text_onClick"
        android:text="@string/text_register"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_login_login"
        tools:ignore="TouchTargetSizeCheck" />

    <ProgressBar
        android:id="@+id/progressBar_login"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:indeterminateTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_login_register" />
</androidx.constraintlayout.widget.ConstraintLayout>